@@ -1,7 +1,16 @@
+2009-06-24 13:03  rsbivand
+
+	* DESCRIPTION, R/gwr.R, man/ggwr.Rd, man/gwr.cv.Rd: updated localR2
+	  to GWR4
+
+2009-06-23 14:08  rsbivand
+
+	* R/gwr.R: firmed up local R2
+
 2009-06-22 22:38  rsbivand
 
-	* DESCRIPTION, R/gwr.R, man/LMZ.F3GWR.test.Rd, man/gwr.Rd: changed
-	  SE to use CC^t, added EDF SE
+	* DESCRIPTION, R/gwr.R, man/LMZ.F3GWR.test.Rd, man/gwr.Rd,
+	  ChangeLog, inst/ChangeLog: changed SE to use CC^t, added EDF SE
 
 2009-06-18 13:42  rsbivand
 
